fixed layout problems

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
+* {
+    box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    overflow: hidden;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 15vh;
+    width: 100%;
+    border: 1px solid black;
 }
 
-.App-link {
-  color: #61dafb;
+section {
+    display: flex;
+    height: 85vh;
+    border: 1px solid black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.side-bar {
+    width: 10%;
+    height: 100%;
+    border: 1px solid black;
+}
+
+main {
+    width: 90%;
+    height: 100%;
+    border: 1px solid black;
 }
